# ChatBaml

./: .env.sample  .gitignore  Comparative Analysis_ ChatBaml vs. LangChain_ReAct Prompt Structures.md  README.md  ReactBaml_Architecture.md  full_example.py  langgraph.json  main.py  pyproject.toml  tutorial.md
.cline/skills/python-development/: .skill-meta.json
baml_src/: chat_baml.baml  clients.baml  generators.baml
custom_langchain_model/: __init__.py
custom_langchain_model/core/: config.py  logging.py  security.py
custom_langchain_model/helpers/: __init__.py  messages.py  parse_json_schema.py  render_agent_wants_to.py
custom_langchain_model/llms/: __init__.py  callbacks.py  chat_baml.py  contexts.py  graphs.py  models.py  states.py  tools.py  types.py
images/: 1732261281369.jfif
memory-bank/: activeContext.md  documentation_workflow.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
react_agent/: agent.py  tools.py
test/fixtures/: sample_tools.py
test/unit/: test_chat_completion_request.py  test_convert_to_baml_tool.py
test/utils/: test_helpers.py
