[project]
name = "custom-langchain-model"
version = "0.1.6"
description = "LangChain custom chat model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "baml-py==0.220.0",
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "ddgs>=9.13.0",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph-cli[inmem]>=0.4.12",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_langchain_model*"]
exclude = ["baml_src*"]  # baml_src isn't a Python package — it's BAML source files
